<?xml version = "1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="2">

    <name>import_project</name>
    <version>0.5.0</version>
    <description>Tutorial Project for import</description>
    <maintainer email="supasan.k@ku.th">Supasan Komonlit</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <build_depend>tutorial_project</build_depend>
    <exec_depend>tutorial_project</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
